--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
     "mongodb": "^3.0.3",
     "morgan": "~1.9.0",
