--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.0.3",
     "morgan": "~1.9.0",
     "request": "^2.85.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "validator": "^9.4.1"
   }
 }
